--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         </dependencies>
     </dependencyManagement>
 
+    <!-- Spring Framework Dependencies -->
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -38,6 +39,8 @@
             <artifactId>spring-hateoas</artifactId>
             <version>0.12.0.RELEASE</version>
         </dependency>
+
+        <!-- Database Dependencies -->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
@@ -108,7 +111,7 @@
             <scope>test</scope>
         </dependency>
 
-
+        <!-- Spring Security -->
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
@@ -129,6 +132,13 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>3.0.1</version>
             <scope>provided</scope>
+        </dependency>
+
+        <!-- Utilities -->
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.2</version>
         </dependency>
     </dependencies>
     <build>
